--- a/cursos_universitarios/requirements.txt
+++ b/cursos_universitarios/requirements.txt
@@ -1,13 +1,13 @@
-asgiref 
+asgiref==3.3.1
 certifi==2020.12.5
-Django
-djangorestframework==3.12.2 
-pytz 
-sqlparse 
-asgiref
+Django==3.1.5
+django-cors-headers==3.6.0
+djangorestframework==3.12.2
 et-xmlfile==1.0.1
 gunicorn==20.0.4
 jdcal==1.4.1
 openpyxl==3.0.5
 Pillow==8.1.0
-
+psycopg2-binary==2.8.6
+pytz==2020.5
+sqlparse==0.4.1
