--- a/cursos_universitarios/Dockerfile
+++ b/cursos_universitarios/Dockerfile
@@ -9,7 +9,7 @@ ENV PYTHONUNBUFFERED 1
 ENV LANG C.UTF-8
 ENV DEBIAN_FRONTEND=noninteractive 
 
-ENV PORT=8888
+ENV PORT=8080
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
         tzdata \
@@ -25,8 +25,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 RUN pip3 install --upgrade pip 
 RUN pip3 install pipenv
+RUN pip3 install django-cors-headers
 
 RUN pipenv install --skip-lock --system --dev
 
-EXPOSE 8888
+EXPOSE 8080
 CMD gunicorn cursos_universitarios.wsgi:application --bind 0.0.0.0:$PORT
