--- a/cursos_universitarios/docker-compose.yaml
+++ b/cursos_universitarios/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     dj:
         container_name: backend
         build: .
+        command: python manage.py makemigrations
         command: python manage.py migrate
         command: gunicorn cursos_universitarios.wsgi:application --bind 0.0.0.0:8080
         volumes: 
